refactor: Random Photo URL, Not Duplicated #71